test: add comments from github test

--- a/ModeloMineriaDatos.ipynb
+++ b/ModeloMineriaDatos.ipynb
@@ -1652,7 +1652,7 @@
    "metadata": {},
    "source": [
     "<div style=\"background:#FFFFE0;padding:20px;color:#000000;margin-top:10px;\">\n",
-    "Cluster 0 Descripción (Conclusión):</br>\n",
+    "Cluster 0 Descripción (Conclusión):</br>\n hola",
     "</div>"
    ]
   },
