--- a/ModeloMineriaDatos.ipynb
+++ b/ModeloMineriaDatos.ipynb
@@ -1652,7 +1652,33 @@
    "metadata": {},
    "source": [
     "<div style=\"background:#FFFFE0;padding:20px;color:#000000;margin-top:10px;\">\n",
-    "Cluster 0 Descripción (Conclusión):</br>\n hola",
+    "Cluster 0 Descripción (Conclusión):</br>\n 
+Título: Los títulos de los videos tienen una longitud promedio de 36.8 caracteres, esto lo que refleja es un estilo de títulos relativamente concisos, con una desviación estándar de 17.2 caracteres donde esto indica que el canal esta usando titulos muy largos de vez en cuando como tambien muy cortos.
+
+Vistas: El promedio de vistas por video es de 267, pero con una desviación estándar de 192 vistas, lo que implica que algunos videos alcanzan muchas más vistas que otros. Esto significa que algunos contenidos están generando mayor interés y visibilidad, mientras que otros tienen un rendimiento más bajo.
+
+Tiempo de Reproducción: El promedio de 4 horas de tiempo de reproducción por video muestra que los videos tienen un tiempo de visualización razonable, pero hay una gran variabilidad (hasta 25.6 horas en algunos casos), lo que significa que algunos videos tienen un rendimiento mucho mejor en términos de retención de audiencia.
+
+Suscriptores: Los videos contribuyen con un promedio de 1.45 nuevos suscriptores por video. Este valor es bajo ya que, aunque los videos están siendo vistos, no están motivando de manera efectiva la suscripción al canal.
+
+Duración Promedio: La duración promedio de los videos es de 52.6 segundos, lo que significa que los videos son breves. Esto puede ser atractivo para los usuarios que buscan contenido rápido, pero también limita la posibilidad de obtener a la audiencia a largo plazo.
+
+Impresiones: Los videos tienen un promedio de 3012.2 impresiones. Sin embargo, la gran desviación estándar de 4048.9 muestra que algunos videos tienen un alcance significativamente mayor que otros. Esto puede deberse a la variabilidad en la forma en que los videos son mostrados en las búsquedas o las recomendaciones de YouTube.
+
+Uso de Emojis y Hashtags: Los títulos de los videos incluyen en promedio 1.16 emojis y las descripciones contienen 3.71 emojis. Además, los títulos tienen en promedio 1.16 hashtags, mientras que las descripciones tienen 7.06 hashtags. El uso moderado de estos elementos indica que el canal está tratando de atraer la atención de los usuarios sin sobrecargar el contenido lo cual es muy bueno.
+
+Sentimiento en las Descripciones: El sentimiento positivo en las descripciones es de 0.0739, mientras que el sentimiento objetivo es de 0.8757. Esto sugiere que las descripciones tienden a ser neutrales o ligeramente positivas, lo que podría ayudar a mantener una relación amigable con los espectadores.
+
+Para aumentar las vistas:
+Se podría hacer que los titulos sean mas atractivos, usando palabras claves.
+Asegurarse de que los hashtags y los emojis en los titulos y descripciones sean relevantes para lo que se esta presentando y lo que la audiencia busca.
+
+Para aumentar suscriptores:
+Se podría decir en el video, donde se haga mas cómodo y mas lógico, decir que se suscriban al canal, de manera amistosa.
+
+Se puede mejorar el alcance del video:
+Algunos videos son cortos y otros largos, y eso hace que la audiencia le guste por lo corto o conciso que es. Sin embargo, se puede alargar la mayoria de videos para que se pueda retener la audiencia por mucho mas tiempo.
+",
     "</div>"
    ]
   },
