Refactor data processing functions in ModeloMineriaDatos.ipynb

--- a/ModeloMineriaDatos.ipynb
+++ b/ModeloMineriaDatos.ipynb
@@ -1652,33 +1652,25 @@
    "metadata": {},
    "source": [
     "<div style=\"background:#FFFFE0;padding:20px;color:#000000;margin-top:10px;\">\n",
-    "Cluster 0 Descripción (Conclusión):</br>\n 
-Título: Los títulos de los videos tienen una longitud promedio de 36.8 caracteres, esto lo que refleja es un estilo de títulos relativamente concisos, con una desviación estándar de 17.2 caracteres donde esto indica que el canal esta usando titulos muy largos de vez en cuando como tambien muy cortos.
-
-Vistas: El promedio de vistas por video es de 267, pero con una desviación estándar de 192 vistas, lo que implica que algunos videos alcanzan muchas más vistas que otros. Esto significa que algunos contenidos están generando mayor interés y visibilidad, mientras que otros tienen un rendimiento más bajo.
-
-Tiempo de Reproducción: El promedio de 4 horas de tiempo de reproducción por video muestra que los videos tienen un tiempo de visualización razonable, pero hay una gran variabilidad (hasta 25.6 horas en algunos casos), lo que significa que algunos videos tienen un rendimiento mucho mejor en términos de retención de audiencia.
-
-Suscriptores: Los videos contribuyen con un promedio de 1.45 nuevos suscriptores por video. Este valor es bajo ya que, aunque los videos están siendo vistos, no están motivando de manera efectiva la suscripción al canal.
-
-Duración Promedio: La duración promedio de los videos es de 52.6 segundos, lo que significa que los videos son breves. Esto puede ser atractivo para los usuarios que buscan contenido rápido, pero también limita la posibilidad de obtener a la audiencia a largo plazo.
-
-Impresiones: Los videos tienen un promedio de 3012.2 impresiones. Sin embargo, la gran desviación estándar de 4048.9 muestra que algunos videos tienen un alcance significativamente mayor que otros. Esto puede deberse a la variabilidad en la forma en que los videos son mostrados en las búsquedas o las recomendaciones de YouTube.
-
-Uso de Emojis y Hashtags: Los títulos de los videos incluyen en promedio 1.16 emojis y las descripciones contienen 3.71 emojis. Además, los títulos tienen en promedio 1.16 hashtags, mientras que las descripciones tienen 7.06 hashtags. El uso moderado de estos elementos indica que el canal está tratando de atraer la atención de los usuarios sin sobrecargar el contenido lo cual es muy bueno.
-
-Sentimiento en las Descripciones: El sentimiento positivo en las descripciones es de 0.0739, mientras que el sentimiento objetivo es de 0.8757. Esto sugiere que las descripciones tienden a ser neutrales o ligeramente positivas, lo que podría ayudar a mantener una relación amigable con los espectadores.
-
-Para aumentar las vistas:
-Se podría hacer que los titulos sean mas atractivos, usando palabras claves.
-Asegurarse de que los hashtags y los emojis en los titulos y descripciones sean relevantes para lo que se esta presentando y lo que la audiencia busca.
-
-Para aumentar suscriptores:
-Se podría decir en el video, donde se haga mas cómodo y mas lógico, decir que se suscriban al canal, de manera amistosa.
-
-Se puede mejorar el alcance del video:
-Algunos videos son cortos y otros largos, y eso hace que la audiencia le guste por lo corto o conciso que es. Sin embargo, se puede alargar la mayoria de videos para que se pueda retener la audiencia por mucho mas tiempo.
-",
+    "Cluster 0 Descripción (Conclusión):</br>\n",
+    "<p>Título: Los títulos de los videos tienen una longitud promedio de 36.8 caracteres, esto lo que refleja es un estilo de títulos relativamente concisos, con una desviación estándar de 17.2 caracteres donde esto indica que el canal esta usando títulos muy largos de vez en cuando como también muy cortos.</p>\n",
+    "\n",
+    "<p>Vistas: El promedio de vistas por video es de 267, pero con una desviación estándar de 192 vistas, lo que implica que algunos videos alcanzan muchas más vistas que otros. Esto significa que algunos contenidos están generando mayor interés y visibilidad, mientras que otros tienen un rendimiento más bajo.</p>\n",
+    "\n",
+    "<p>Tiempo de Reproducción: El promedio de 4 horas de tiempo de reproducción por video muestra que los videos tienen un tiempo de visualización razonable, pero hay una gran variabilidad (hasta 25.6 horas en algunos casos), lo que significa que algunos videos tienen un rendimiento mucho mejor en términos de retención de audiencia.</p>\n",
+    "\n",
+    "<p>Suscriptores: Los videos contribuyen con un promedio de 1.45 nuevos suscriptores por video. Este valor es bajo ya que, aunque los videos están siendo vistos, no están motivando de manera efectiva la suscripción al canal.</p>\n",
+    "\n",
+    "<p>Duración Promedio: La duración promedio de los videos es de 52.6 segundos, lo que significa que los videos son breves. Esto puede ser atractivo para los usuarios que buscan contenido rápido, pero también limita la posibilidad de obtener a la audiencia a largo plazo.</p>\n",
+    "\n",
+    "<p>Impresiones: Los videos tienen un promedio de 3012.2 impresiones. Sin embargo, la gran desviación estándar de 4048.9 muestra que algunos videos tienen un alcance significativamente mayor que otros. Esto puede deberse a la variabilidad en la forma en que los videos son mostrados en las búsquedas o las recomendaciones de YouTube.</p>\n",
+    "\n",
+    "<p>Uso de Emojis y Hashtags: Los títulos de los videos incluyen en promedio 1.16 emojis y las descripciones contienen 3.71 emojis. Además, los títulos tienen en promedio 1.16 hashtags, mientras que las descripciones tienen 7.06 hashtags. El uso moderado de estos elementos indica que el canal está tratando de atraer la atención de los usuarios sin sobrecargar el contenido lo cual es muy bueno.</p>\n",
+    "\n",
+    "<p>Sentimiento en las Descripciones: El sentimiento positivo en las descripciones es de 0.0739, mientras que el sentimiento objetivo es de 0.8757. Esto sugiere que las descripciones tienden a se ligeramente positivas, lo que podría ayudar a mantener una relación amigable con los usuarios.</p>\n",
+    "\n",
+    "<p>En conclusión, el cluster #0 los videos sobresalen por su alto desempeño en términos de vistas, tiempo de reproducción y nuevos suscriptores, lo que demuestra que los usuarios están disfrutando del contenido. Además, la estrategia de usar títulos y descripciones concisas, con un uso equilibrado de emojis y hashtags, parece estar dando buenos resultados.</p>\n",
+    "\n",
     "</div>"
    ]
   },
@@ -2148,6 +2140,27 @@ Algunos videos son cortos y otros largos, y eso hace que la audiencia le guste p
    "source": [
     "<div style=\"background:#FFFFE0;padding:20px;color:#000000;margin-top:10px;\">\n",
     "Cluster 1 Descripción (Conclusión):</br>\n",
+    "<p>Título: La longitud del título es de 26 caracteres en promedio. Esto refleja títulos que son breves y concisos, lo que podría estar dirigido a captar rápidamente la atención de los todos los usuarios. Dado que solo un valor, no podemos observar una tendencia en cuanto a títulos más largos o cortos.</p>\n",
+    "\n",
+    "<p>Vistas: El promedio de las vistas es de 6961 por video. Asimismo, esto indica un rendimiento sobresaliente para la visibilidad del canal y la popularidad con respecto al video.</p>\n",
+    "\n",
+    "<p>Tiempo de Reproducción: Los videos tiene 91.86 horas de tiempo de reproducción. Es un valor alto, lo que significa que los usuarios están dedicando una cantidad de tiempo a ver el los videos.</p>\n",
+    "\n",
+    "<p>Suscriptores: El promedio de suscriptores nuevos por video es de 30. Esto significa que los videos están motivando a los espectadores a suscribirse al canal.</p>\n",
+    "\n",
+    "<p>Duración Promedio: Los videos tienen un promedio de 47 segundos de duración. Esto significa que el contenido del video es breve y largo para mantener al usuario visualizando todo el video.</p>\n",
+    "\n",
+    "<p>Impresiones: El número de impresiones es de 268.415, esto significa que los videos están apareciendo en las búsquedas y recomendaciones del mismo YouTube, donde esto alcanzó una audiencia amplia.</p>\n",
+    "\n",
+    "<p>Descripción: La descripción tiene una longitud promedio de 1078 caracteres, Esto significa que los videos tiene unas descripciones detalladas, donde puede ayudar al usuario a comprender lo que está a punto de visualizar.</p>\n",
+    "\n",
+    "<p>Uso de Emojis y Hashtags: Los títulos de los videos incluyen un promedio de 1 emoji, mientras que las descripciones contienen 11 emojis. Asimismo, el uso de emojis en la descripción captan la atención de los usuarios. Por otro lado, los títulos tienen un promedio de 1 hashtag, mientras que las descripciones contienen 6 hashtags, lo que ayuda a mejorar la visualización del contenido en las búsquedas relacionadas con esos hashtags.</p>\n",
+    "\n",
+    "<p>Sentimiento en las Descripciones: El sentimiento positivo en las descripciones es de 0.0646, mientras que el sentimiento objetivo es de 0.8947. Esto significa que las descripciones tiene un tono ligeramente positivo, lo que podría estar unido con el enfoque del canal de ser amigable con los usuarios pero directos.</p>\n",
+    "\n",
+    "<p>En conclusión, este cluster #1 podemos ver que este conjunto de datos representa un rendimiento considerablemente alto en términos de vistas e impresiones, con un promedio de 6961 vistas por video y 268,415 impresiones. La longitud promedio de los títulos es relativamente corta, lo que podría reflejar una tendencia a ser concisos y directos. Sin embargo, el bajo número de nuevos suscriptores nos dice que, aunque los videos atraen a usuarios significativos, no están siendo tan efectivos en convertir vistas en suscripciones. Los videos también tienden a ser de corta duración pero este es un factor positivo para mantener la atención, pero podría limitar la profundidad del contenido. El uso moderado de emojis y hashtags parece estar optimizado, lo que puede estar ayudando a mejorar la visibilidad en las búsquedas y recomendaciones de YouTube. </p>\n",
+    "\n",
+    "\n",
     "</div>"
    ]
   },
@@ -2674,8 +2687,31 @@ Algunos videos son cortos y otros largos, y eso hace que la audiencia le guste p
    "source": [
     "<div style=\"background:#FFFFE0;padding:20px;color:#000000;margin-top:10px;\">\n",
     "Cluster 2 Descripción (Conclusión):</br>\n",
+    "<p>Título: La longitud del título tiene un promedio de 44 caracteres, donde esto refleja  utilizar títulos relativamente moderados, que no son ni demasiado cortos ni excesivamente largos.</p>\n",
+    "\n",
+    "<p>Vistas: El promedio de las vistas es de un 2338 por video. Esto significa que los videos están alcanzando una audiencia considerable, pero las vistas no tienen la altura que deberían de tener, lo que da a entender que los videos no están siendo virales. \n",
+    "</p>\n",
+    "<p>Tiempo de Reproducción: Los videos tiene un promedio de 63.87 horas de tiempo de reproducción. Esto significa, que los videos están atrayendo nuevos suscriptores al canal, pero de igual forma el ritmo de este podría mejorar.\n",
+    "</p>\n",
+    "<p>Duración Promedio: Los videos tienen un promedio de 93.67 segundos de duración, donde esta podemos notarla como relativamente corta, que puede ser una estrategia para mantener la atención de la audiencia sin abrumarla. Estos videos cortos, pueden mantener la atención de los usuarios.\n",
+    "</p>\n",
+    "<p>Impresiones: Los videos tienen un promedio de 43,637 de impresiones, lo que se puede visualizar como buen nivel de visualización. Sin embargo, algunos videos están siendo mostrados con mayor frecuencia en las recomendaciones de YouTube que otros.\n",
+    "</p>\n",
+    "<p>Descripción: Las descripciones de los videos tienen una longitud promedio de 1,021.33 caracteres (se considera largo), con un significado de que los del canal están proporcionando explicaciones detalladas a todos sus usuarios mediante la descripción de los videos.\n",
+    "</p>\n",
+    "<p>Sentimiento en las descripciones: El sentimiento positivo es de 0.0798 y el sentimiento objetivo es de 0.8663, lo que indica que las descripciones son casi la mayoría neutrales, es decir que no intentan influir emocionalmente en los usuarios espectadores.\n",
+    "</p>\n",
+    "<p>Uso de emojis y hashtags: Los títulos tienen 1 emoji de promedio, mientras que en las descripciones tienen un promedio de 8 emojis. Al usar emojis moderadamente, ayuda a que el contenido sea mas atractivo visualmente. Por otro lado, los títulos incluyen 1 hashtag y las descripciones 3 hashtags, lo que significa que pueden encontrar los videos del canal mediante esos hashtags en una búsqueda general.</p>\n",
+    "\n",
+    "<p>En conclusión, este cluster #2 muestra un rendimiento adecuado en cuanto a vistas, tiempo de reproducción y suscriptores. Los videos tienen un buen nivel de visibilidad, con un número considerable de impresiones, pero la tasa de conversión a suscriptores puede mejorarse. La duración de los videos, de aproximadamente 1.5 minutos, es relativamente corta y puede estar contribuyendo a mantener la atención de los usuarios. </p>\n",
+    "\n",
     "</div>"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
