Fix typos and improve clarity in ModeloMineriaDatos.ipynb

--- a/ModeloMineriaDatos.ipynb
+++ b/ModeloMineriaDatos.ipynb
@@ -7,7 +7,7 @@
     "<div style=\"background:#FFFFE0;padding:20px;color:#000000;margin-top:10px;\">\n",
     "Ahora, podemos analizar los datos de los clusters, para ver que características tienen y si podemos sacar alguna conclusión de ellos.</br>\n",
     "\n",
-    "A pesar de que el mejor modelo funciona con los datos crudos y con los datos categorizados procesador por OneHotEncoder, utilizando 2 clusteres, tenemos que tener en cuenta que el modelo nos retorna 1 cluster que tiene 1 solo elemento, por lo que no podemos sacar ninguna conclusión de él. Por lo tanto, vamos a utilizar el modelo que utiliza los datos crudos y con los datos categorizados procesador por OneHotEncoder pero 3 clusteres.\n",
+    "A pesar de que el mejor modelo funciona con los datos crudos y con los datos categorizados procesados por OneHotEncoder, utilizando 2 clusteres, tenemos que tener en cuenta que el modelo nos retorna 1 cluster que tiene 1 solo elemento, por lo que no podemos sacar ninguna conclusión de él. Por lo tanto, vamos a utilizar el modelo que utiliza los datos crudos y con los datos categorizados procesador por OneHotEncoder pero 3 clusteres.\n",
     "</div>"
    ]
   },
@@ -2158,7 +2158,7 @@
     "\n",
     "<p>Sentimiento en las Descripciones: El sentimiento positivo en las descripciones es de 0.0646, mientras que el sentimiento objetivo es de 0.8947. Esto significa que las descripciones tiene un tono ligeramente positivo, lo que podría estar unido con el enfoque del canal de ser amigable con los usuarios pero directos.</p>\n",
     "\n",
-    "<p>En conclusión, este cluster #1 podemos ver que este conjunto de datos representa un rendimiento considerablemente alto en términos de vistas e impresiones, con un promedio de 6961 vistas por video y 268,415 impresiones. La longitud promedio de los títulos es relativamente corta, lo que podría reflejar una tendencia a ser concisos y directos. Sin embargo, el bajo número de nuevos suscriptores nos dice que, aunque los videos atraen a usuarios significativos, no están siendo tan efectivos en convertir vistas en suscripciones. Los videos también tienden a ser de corta duración pero este es un factor positivo para mantener la atención, pero podría limitar la profundidad del contenido. El uso moderado de emojis y hashtags parece estar optimizado, lo que puede estar ayudando a mejorar la visibilidad en las búsquedas y recomendaciones de YouTube. </p>\n",
+    "<p>En conclusión, este cluster #1 podemos ver que este conjunto de datos representa un rendimiento considerablemente alto en términos de vistas e impresiones, con un promedio de 6961 vistas por video y 268,415 impresiones. La longitud promedio de los títulos es relativamente corta, lo que podría reflejar una tendencia a ser concisos y directos. Sin embargo, el bajo número de nuevos suscriptores nos dice que, aunque los videos atraen a usuarios significativos, no están siendo tan efectivos en convertir vistas en suscripciones. Los videos también tienden a ser de corta duración pero este es un factor positivo para mantener la atención de los usuarios, pero asimismo este podría limitar la profundidad del contenido. El uso moderado de emojis y hashtags parece estar optimizado es decir equilibra el uso de estos, lo que puede estar ayudando a mejorar la visibilidad en las búsquedas y recomendaciones de YouTube. </p>\n",
     "\n",
     "\n",
     "</div>"
@@ -2693,6 +2693,7 @@
     "</p>\n",
     "<p>Tiempo de Reproducción: Los videos tiene un promedio de 63.87 horas de tiempo de reproducción. Esto significa, que los videos están atrayendo nuevos suscriptores al canal, pero de igual forma el ritmo de este podría mejorar.\n",
     "</p>\n",
+    "<p>Suscriptores: Tiene un promedio de 12.33 suscriptores, lo que indica que los videos estan atrayendo una muy buena cantidad de suscriptores. Esto significa que los videos estan logrando captar la atención de los usuarios, siendo este asi una estrategia para aumentar la población de suscriptores </p>\n",
     "<p>Duración Promedio: Los videos tienen un promedio de 93.67 segundos de duración, donde esta podemos notarla como relativamente corta, que puede ser una estrategia para mantener la atención de la audiencia sin abrumarla. Estos videos cortos, pueden mantener la atención de los usuarios.\n",
     "</p>\n",
     "<p>Impresiones: Los videos tienen un promedio de 43,637 de impresiones, lo que se puede visualizar como buen nivel de visualización. Sin embargo, algunos videos están siendo mostrados con mayor frecuencia en las recomendaciones de YouTube que otros.\n",
@@ -2703,7 +2704,7 @@
     "</p>\n",
     "<p>Uso de emojis y hashtags: Los títulos tienen 1 emoji de promedio, mientras que en las descripciones tienen un promedio de 8 emojis. Al usar emojis moderadamente, ayuda a que el contenido sea mas atractivo visualmente. Por otro lado, los títulos incluyen 1 hashtag y las descripciones 3 hashtags, lo que significa que pueden encontrar los videos del canal mediante esos hashtags en una búsqueda general.</p>\n",
     "\n",
-    "<p>En conclusión, este cluster #2 muestra un rendimiento adecuado en cuanto a vistas, tiempo de reproducción y suscriptores. Los videos tienen un buen nivel de visibilidad, con un número considerable de impresiones, pero la tasa de conversión a suscriptores puede mejorarse. La duración de los videos, de aproximadamente 1.5 minutos, es relativamente corta y puede estar contribuyendo a mantener la atención de los usuarios. </p>\n",
+    "<p>En conclusión, este cluster #2 muestra un rendimiento adecuado en cuanto a vistas, tiempo de reproducción y suscriptores. Los videos tienen un buen nivel de visibilidad, con un número considerable de impresiones, pero la tasa de suscriptores es muy buena. La duración de los videos, de aproximadamente 1.5 minutos, es relativamente corta y puede estar contribuyendo a mantener la atención de los usuarios. </p>\n",
     "\n",
     "</div>"
    ]
